--- a/omero-dev/Dockerfile
+++ b/omero-dev/Dockerfile
@@ -1,6 +1,6 @@
-FROM openmicroscopy/omero-web-standalone:latest
+FROM openmicroscopy/omero-server:latest
 USER root
 RUN mkdir /addons
 RUN pip install --upgrade pip
 RUN pip install Django
-USER omero-web
+USER omero
