--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: "3.7"
 services:
-  omero-web-dev:
+  omero-dev:
     container_name: omero-dev
     build:
       context: ./omero-dev
     image: omero-dev
     environment:
       - ${OMEROHOST-localhost}
+      - PYTHONPATH=$PYTHONPATH:/opt/omero/server/OMERO.server-5.4.10-ice36-b105/lib/python
     volumes:
       - type: bind
         source: ${OMERO_DEV_DIR-./addons}
